--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Resume</title>
 </head>
 <body>
-    <h1>Hi,I am Bijendra Kumar</h1>
+    <h1>Bijendra Kumar</h1>
     <img src="./Images/profile.jpg" alt="Profile picture" height="150" width="150">
     <p>Mern Stack Web Developer,a Passionate Web Developer<br> using HTML,CSS, JavaScript, NodeJs, Bootstrap. Loves <br>solving Data Structures and Algorithm problems.</p>
     <hr>
