--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <hr>
     <h3>Education</h3>
     <ul>
-        <li><p>Matriculate<br>D.A.V Public School<br>CGPA 8.4<br>2014</p></li>
-        <li><p>Intermediate<br>D.A.V Public School<br>Percentage 77%<br>2016</p></li>
-        <li><p>B.tech<br>Lovely Professional University<br>CGPA 8.01<br>2018-2022</p></li>
+        <li><p>Matriculate<br>D.A.V Public School<br>CGPA: 8.4<br>2014</p></li>
+        <li><p>Intermediate<br>D.A.V Public School<br>Percentage: 77%<br>2016</p></li>
+        <li><p>B.tech<br>Lovely Professional University<br>CGPA: 8.01<br>2018-2022</p></li>
     </ul><hr>
     <h3>Skills</h3>    
     <ul>
