--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li>JavaScript</li>
                 <li>ReactJs</li>
                 <li>NodeJs</li>
+                <li>MongoDb</li>
             </ul>
         <li>Professional Skills</li>
             <ul>
